# 2d-physics-engine

./: .gitignore  CMakeLists.txt  README.md  build.bat
include/game/: ball.h  objects.h
include/math/: Vec2.h  math_utils.cpp  math_utils.h
include/physics/: Body.h  colliders.h  collisions.h  physicsWorld.h  rigidBody.h
include/render/: render.h  renderUtils.h
include/test/: tests.h
src/: main.cpp
src/game/: ball.cpp  objects.cpp
src/math/: math_utils.cpp
src/physics/: collisions.cpp  physicsWorld.cpp  rigidBody.cpp
src/render_sfml/: render.cpp
src/render_sfml/Demo/: fallingObjectsDemo.cpp
src/test/: Test_MultiContact.cpp  Test_Penetration.cpp  Test_Restitution.cpp  Test_Rolling.cpp  Test_Stacking.cpp  tests.cpp
